--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.4",
     "mongoose": "^5.5.8",
     "nodemon": "^1.19.1"
+  },
+  "engines": {
+    "node": "12.16.x"
   }
 }
